# video-generator

./: .gitignore  README.md  pyproject.toml
src/: audio_generator_example.py  brown_noise_example.py  runner.py  sound_track_example.py
src/audio/: generate_audio.py
src/brown_noise/: generate_brown_noise.py
src/commons/: base_model.py
src/soundtrack/: generate_soundtrack.py
src/utils/: utils.py
