[tool.poetry]
name = "video-generator"
version = "0.1.0"
description = "AI video generator using Hugging Face models"
authors = ["joelsonsantos <joelsonn.santos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = "^2.8.0"
transformers = "^4.56.1"
soundfile = "^0.13.1"
moviepy = "^2.2.1"
diffusers = "^0.35.1"
accelerate = "^1.10.1"
scipy = "^1.16.1"
matplotlib = "^3.10.6"
imageio = {extras = ["ffmpeg"], version = "^2.37.0"}
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
